Compressed Images Fixed text offset

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
         <ul>
           <li>
             <a href="http://frosted.mikesaidani.com" target="_blank">
-              <img src="assets/images/resume.png">
+              <img src="assets/images/resume.jpg">
               <div class="overlay">
                 <h3>Console Resume</h3>
               </div>
@@ -75,7 +75,7 @@
           </li>
           <li>
             <a href="http://letscook.mikesaidani.com" target="_blank">
-              <img src="assets/images/cook.png">
+              <img src="assets/images/cook.jpg">
               <div class="overlay">
                 <h3>Recipes landing page</h3>
               </div>
@@ -83,7 +83,7 @@
           </li>
           <li>
             <a href="http://peertransfer.mikesaidani.com" target="_blank">
-              <img src="assets/images/peer.png">
+              <img src="assets/images/peer.jpg">
               <div class="overlay">
                 <h3>Peertransfer Redesign</h3>
               </div>
